syntax = "proto3";

package livevox.is.metricsservice.controller.grpc;

option java_package = "com.livevox.is.metricsservice.controller.grpc";
option java_multiple_files = true;

import "livevox/is/domain/metrics/request_messages.proto";
import "livevox/is/domain/metrics/response_messages.proto";

service AgentEventController {

  rpc getActiveAgents(livevox.is.domain.metrics.request.MetricsRequestGrpc)
      returns (stream livevox.is.domain.metrics.response.IdClassGrpc);

  rpc getAgentEvents(livevox.is.domain.metrics.request.AgentEventRequestGrpc)
      returns (stream livevox.is.domain.metrics.response.AgentEventGrpc);

  rpc getAgentEventsByClient(livevox.is.domain.metrics.request.AgentEventRequestGrpc)
      returns (stream livevox.is.domain.metrics.response.AgentEventGrpc);

  rpc getAgentProductivity(livevox.is.domain.metrics.request.AgentEventRequestGrpc)
      returns (stream livevox.is.domain.metrics.response.AgentProductivityGrpc);
}